# codereview-env

./: .dockerignore  .gitignore  .openenvignore  Dockerfile  README.md  app.py  baseline.py  baseline_scores.json  client.py  dataset.py  environment.py  generator.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  sessions.py
data/task1/: scenario_001.json  scenario_002.json  scenario_003.json  scenario_004.json  scenario_005.json  scenario_006.json  scenario_007.json  scenario_008.json  scenario_009.json  scenario_010.json  scenario_011.json  scenario_012.json  scenario_013.json  scenario_014.json  scenario_015.json  scenario_016.json  scenario_017.json  scenario_018.json  scenario_019.json  scenario_020.json
data/task2/: scenario_001.json  scenario_002.json  scenario_003.json  scenario_004.json  scenario_005.json  scenario_006.json  scenario_007.json  scenario_008.json  scenario_009.json  scenario_010.json  scenario_011.json  scenario_012.json  scenario_013.json  scenario_014.json  scenario_015.json  scenario_016.json  scenario_017.json  scenario_018.json  scenario_019.json  scenario_020.json
data/task3/: scenario_001.json  scenario_002.json  scenario_003.json  scenario_004.json  scenario_005.json  scenario_006.json  scenario_007.json  scenario_008.json  scenario_009.json  scenario_010.json  scenario_011.json  scenario_012.json  scenario_013.json  scenario_014.json  scenario_015.json  scenario_016.json  scenario_017.json  scenario_018.json  scenario_019.json  scenario_020.json
server/: __init__.py  app.py  dataset.py  environment.py  sessions.py
tests/: test_clamp_compliance.py  test_environment.py  test_grader_variance.py
