[project]
name = "codereview-env"
version = "1.0.0"
description = "RL environment for training agents to perform intelligent code review"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "pydantic>=2.7.1",
    "httpx>=0.27.0",
    "requests>=2.32.2",
    "pyyaml>=6.0.1",
    "openai>=1.0.0",
]

[project.scripts]
server = "uvicorn app:app --host 0.0.0.0 --port 7860"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"